@@ -28,23 +28,11 @@
 package org.hisp.dhis.tracker.export.trackedentity;
 
 import static com.google.common.base.Preconditions.checkNotNull;
+import static java.util.Map.entry;
 import static org.hisp.dhis.common.IdentifiableObjectUtils.getIdentifiers;
 import static org.hisp.dhis.commons.util.TextUtils.getCommaDelimitedString;
 import static org.hisp.dhis.commons.util.TextUtils.getQuotedCommaDelimitedString;
 import static org.hisp.dhis.commons.util.TextUtils.getTokens;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.CREATED_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.DELETED;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.INACTIVE_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.LAST_UPDATED_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.MAIN_QUERY_ALIAS;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.ORG_UNIT_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.ORG_UNIT_NAME;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.OrderColumn.ENROLLED_AT;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.OrderColumn.findColumn;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.POTENTIAL_DUPLICATE;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.PROGRAM_INSTANCE_ALIAS;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.TRACKED_ENTITY_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.TRACKED_ENTITY_TYPE_ID;
 import static org.hisp.dhis.util.DateUtils.addDays;
 import static org.hisp.dhis.util.DateUtils.getLongGmtDateString;
 import static org.hisp.dhis.util.DateUtils.getMediumDateString;
@@ -53,7 +41,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -82,9 +70,10 @@ import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.setting.SettingKey;
 import org.hisp.dhis.setting.SystemSettingManager;
 import org.hisp.dhis.trackedentity.TrackedEntity;
+import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
+import org.hisp.dhis.tracker.export.Order;
 import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.util.DateUtils;
-import org.hisp.dhis.webapi.controller.event.mapper.OrderParam;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.rowset.SqlRowSet;
@@ -95,9 +84,19 @@ import org.springframework.stereotype.Repository;
 class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<TrackedEntity>
     implements TrackedEntityStore {
 
+  private static final String MAIN_QUERY_ALIAS = "TE";
+
+  private static final String ENROLLMENT_ALIAS = "en";
+
+  private static final String DEFAULT_ORDER = MAIN_QUERY_ALIAS + ".trackedentityid desc";
+
   private static final String OFFSET = "OFFSET";
 
   private static final String LIMIT = "LIMIT";
+
+  private static final String ENROLLMENT_DATE_ALIAS = "en_enrollmentdate";
+
+  private static final String ENROLLMENT_DATE_KEY = "enrollment.enrollmentDate";
 
   private static final String EV_EXECUTIONDATE = "EV.executiondate";
 
@@ -115,14 +114,21 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
 
   private static final String EV_STATUS = "EV.status";
 
-  private static final String UID_VALUE_SEPARATOR = ":";
+  private static final String SELECT_COUNT_INSTANCE_FROM = "SELECT count(trackedentityid) FROM ( ";
 
-  private static final String UID_VALUE_PAIR_SEPARATOR = ";@//@;";
-  public static final String SELECT_COUNT_INSTANCE_FROM = "SELECT count(instance) FROM ( ";
-
-  // -------------------------------------------------------------------------
-  // Dependencies
-  // -------------------------------------------------------------------------
+  /**
+   * Tracked entities can be ordered by given fields which correspond to fields on {@link
+   * org.hisp.dhis.trackedentity.TrackedEntity}. Maps fields to DB columns.
+   */
+  private static final Map<String, String> ORDERABLE_FIELDS =
+      Map.ofEntries(
+          entry("uid", "uid"),
+          entry("created", "created"),
+          entry("createdAtClient", "createdatclient"),
+          entry("lastUpdated", "lastupdated"),
+          entry("lastUpdatedAtClient", "lastupdatedatclient"),
+          entry(ENROLLMENT_DATE_KEY, ENROLLMENT_DATE_ALIAS),
+          entry("inactive", "inactive"));
 
   private final OrganisationUnitStore organisationUnitStore;
 
@@ -130,7 +136,6 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
 
   private final SystemSettingManager systemSettingManager;
 
-  // TODO too many arguments in constructor. This needs to be refactored.
   public HibernateTrackedEntityStore(
       SessionFactory sessionFactory,
       JdbcTemplate jdbcTemplate,
@@ -158,25 +163,26 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     this.systemSettingManager = systemSettingManager;
   }
 
-  // -------------------------------------------------------------------------
-  // Implementation methods
-  // -------------------------------------------------------------------------
-
   @Override
   public List<Long> getTrackedEntityIds(TrackedEntityQueryParams params) {
     String sql = getQuery(params);
     log.debug("Tracked entity query SQL: " + sql);
     SqlRowSet rowSet = jdbcTemplate.queryForRowSet(sql);
 
-    checkMaxTeiCountReached(params, rowSet);
+    checkMaxTrackedEntityCountReached(params, rowSet);
 
     List<Long> ids = new ArrayList<>();
 
     while (rowSet.next()) {
-      ids.add(rowSet.getLong("teId"));
+      ids.add(rowSet.getLong("trackedentityid"));
     }
 
     return ids;
+  }
+
+  @Override
+  public Set<String> getOrderableFields() {
+    return ORDERABLE_FIELDS.keySet();
   }
 
   private String encodeAndQuote(Collection<String> elements) {
@@ -186,7 +192,8 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
             .collect(Collectors.toList()));
   }
 
-  private void checkMaxTeiCountReached(TrackedEntityQueryParams params, SqlRowSet rowSet) {
+  private void checkMaxTrackedEntityCountReached(
+      TrackedEntityQueryParams params, SqlRowSet rowSet) {
     if (params.getMaxTeLimit() > 0 && rowSet.last()) {
       if (rowSet.getRow() > params.getMaxTeLimit()) {
         throw new IllegalQueryException("maxteicountreached");
@@ -196,15 +203,15 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
   }
 
   @Override
-  public int getTrackedEntityCountForGrid(TrackedEntityQueryParams params) {
+  public int getTrackedEntityCount(TrackedEntityQueryParams params) {
     String sql = getCountQuery(params);
     log.debug("Tracked entity count SQL: " + sql);
     return jdbcTemplate.queryForObject(sql, Integer.class);
   }
 
   @Override
-  public int getTrackedEntityCountForGridWithMaxTeiLimit(TrackedEntityQueryParams params) {
-    String sql = getCountQueryWithMaxTeiLimit(params);
+  public int getTrackedEntityCountWithMaxTrackedEntityLimit(TrackedEntityQueryParams params) {
+    String sql = getCountQueryWithMaxTrackedEntityLimit(params);
     log.debug("Tracked entity count SQL: " + sql);
     return jdbcTemplate.queryForObject(sql, Integer.class);
   }
@@ -244,17 +251,17 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    * indicates the te must be enrolled in that program. Since the relation between te and
    * enrollments are not 1:1, but 1:many, we use exists to avoid duplicate rows of te, allowing us
    * to avoid grouping the result before we order and limit. This saves a lot of time. NOTE: Within
-   * the program_constraint, we also have a subquery to deal with any event-related constraints.
+   * the program_constraint, we also have a sub-query to deal with any event-related constraints.
    * These can either be constraints on any static properties, or user assignment. For user
    * assignment, we also join with the userinfo table. For events, we have an index (status,
    * executiondate) which speeds up the lookup significantly order: Order is used both in the
-   * subquery and the main query. The sort depends on the params (see more info on the related
-   * method). We order the subquery to make sure we get correct results before we limit. We order
+   * sub-query and the main query. The sort depends on the params (see more info on the related
+   * method). We order the sub-query to make sure we get correct results before we limit. We order
    * the main query since the aggregation mixes up the order, so to return a consistent order, we
    * order again. limit_offset: The limit and offset is set based on a combination of params:
    * program and tet can have a maxte limit, which only applies during a search outside the users
    * capture scope. If applied, it will throw an error if the number of results exceeds the limit.
-   * Otherwise we use paging. If no paging is set, there is no limit. additional_information: Here
+   * Otherwise, we use paging. If no paging is set, there is no limit. additional_information: Here
    * we do a left join with any relevant information needed for the result: tet name, any attributes
    * to project, etc. We left join, since we don't want to reduce the results, just add information.
    * main_groupby: The purpose of this group by, is to aggregate any attributes added in
@@ -270,14 +277,11 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     }
 
     StringBuilder stringBuilder = new StringBuilder(getQuerySelect(params));
-
     return stringBuilder
-        .append(", TE.trackedentityid AS teId ")
         .append("FROM ")
-        .append(getFromSubQuery(params, false, false))
+        .append(getFromSubQuery(params, false))
         .append(getQueryRelatedTables(params))
-        .append(getQueryGroupBy(params))
-        .append(getQueryOrderBy(false, params, false))
+        .append(getQueryOrderBy(params, false))
         .toString();
   }
 
@@ -292,9 +296,8 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     return SELECT_COUNT_INSTANCE_FROM
         + getQuerySelect(params)
         + "FROM "
-        + getFromSubQuery(params, true, true)
+        + getFromSubQuery(params, true)
         + getQueryRelatedTables(params)
-        + getQueryGroupBy(params)
         + " ) tecount";
   }
 
@@ -305,13 +308,12 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    * @param params params defining the query
    * @return a count SQL query
    */
-  private String getCountQueryWithMaxTeiLimit(TrackedEntityQueryParams params) {
+  private String getCountQueryWithMaxTrackedEntityLimit(TrackedEntityQueryParams params) {
     return SELECT_COUNT_INSTANCE_FROM
         + getQuerySelect(params)
         + "FROM "
-        + getFromSubQuery(params, true, true)
+        + getFromSubQuery(params, true)
         + getQueryRelatedTables(params)
-        + getQueryGroupBy(params)
         + (params.getProgram().getMaxTeiCountToReturn() > 0
             ? getLimitClause(params.getProgram().getMaxTeiCountToReturn() + 1)
             : "")
@@ -319,8 +321,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
   }
 
   /**
-   * Generates the projection of the main query. Includes two optional columns, deleted and
-   * tea_values
+   * Generates the projection of the main query
    *
    * @return an SQL projection
    */
@@ -328,45 +329,43 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     LinkedHashSet<String> select =
         new LinkedHashSet<>(
             List.of(
-                "SELECT TE.uid AS " + TRACKED_ENTITY_ID,
-                "TE.created AS " + CREATED_ID,
-                "TE.lastupdated AS " + LAST_UPDATED_ID,
-                "TE.ou AS " + ORG_UNIT_ID,
-                "TE.ouname AS " + ORG_UNIT_NAME,
-                "TET.uid AS " + TRACKED_ENTITY_TYPE_ID,
-                "TE.inactive AS " + INACTIVE_ID,
-                "TE.potentialduplicate AS " + POTENTIAL_DUPLICATE,
-                params.isIncludeDeleted() ? "TE.deleted AS " + DELETED : "",
-                params.hasAttributes()
-                    ? "string_agg(TEA.uid || '"
-                        + UID_VALUE_SEPARATOR
-                        + "' || TEAV.value, '"
-                        + UID_VALUE_PAIR_SEPARATOR
-                        + "') AS tea_values"
-                    : ""));
+                "TE.trackedentityid",
+                "TE.uid",
+                "TE.created",
+                "TE.lastupdated",
+                "TE.inactive",
+                "TE.potentialduplicate",
+                "TE.deleted",
+                "TE.orgunit_uid",
+                "TE.orgunit_name",
+                "TE.trackedentitytypeid"));
 
-    params.getOrders().stream()
-        .map(o -> findColumn(o.getField()))
-        .filter(Optional::isPresent)
-        .forEach(c -> select.add(c.get().getSqlColumnWithMainTable()));
+    // all orderable fields are already in the select. Only when ordering by enrollment date do we
+    // need to add a column, so we can order by it
+    for (Order order : params.getOrder()) {
+      if (order.getField() instanceof String field && ENROLLMENT_DATE_KEY.equals(field)) {
+        select.add(ENROLLMENT_DATE_ALIAS);
+      }
+    }
 
-    return select.stream().filter(c -> !c.isEmpty()).collect(Collectors.joining(", ")) + SPACE;
+    return "select "
+        + select.stream().filter(c -> !c.isEmpty()).collect(Collectors.joining(", "))
+        + SPACE;
   }
 
   /**
-   * Generates the SQL of the subquery, used to find the correct subset of tracked entity instances
-   * to return. Orchestrates all the different segments of the SQL into a complete subquery.
+   * Generates the SQL of the sub-query, used to find the correct subset of tracked entity instances
+   * to return. Orchestrates all the different segments of the SQL into a complete sub-query.
    *
-   * @return an SQL subquery
+   * @return an SQL sub-query
    */
-  private String getFromSubQuery(
-      TrackedEntityQueryParams params, boolean isCountQuery, boolean isGridQuery) {
+  private String getFromSubQuery(TrackedEntityQueryParams params, boolean isCountQuery) {
     SqlHelper whereAnd = new SqlHelper(true);
     StringBuilder fromSubQuery =
         new StringBuilder()
             .append("(")
             .append(getFromSubQuerySelect(params))
-            .append(" FROM trackedentity TE ")
+            .append(" FROM trackedentity " + MAIN_QUERY_ALIAS + " ")
 
             // INNER JOIN on constraints
             .append(getFromSubQueryJoinAttributeConditions(params))
@@ -384,8 +383,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     if (!isCountQuery) {
       // SORT
       fromSubQuery
-          .append(getQueryOrderBy(true, params, isGridQuery))
-
+          .append(getQueryOrderBy(params, true))
           // LIMIT, OFFSET
           .append(getFromSubQueryLimitAndOffset(params));
     }
@@ -403,31 +401,44 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     LinkedHashSet<String> columns =
         new LinkedHashSet<>(
             List.of(
-                "TE.trackedentityid",
-                "TE.uid",
-                "TE.created",
-                "TE.lastupdated",
-                "TE.inactive",
-                "TE.trackedentitytypeid",
-                "TE.potentialduplicate",
-                "TE.deleted",
-                "OU.uid as ou",
-                "OU.name as ouname "));
+                "TE.trackedentityid as trackedentityid",
+                "TE.trackedentitytypeid as trackedentitytypeid",
+                "TE.uid as uid",
+                "TE.created as created",
+                "TE.lastupdated as lastupdated",
+                "TE.inactive as inactive",
+                "TE.potentialduplicate as potentialduplicate",
+                "TE.deleted as deleted",
+                "OU.uid as orgunit_uid",
+                "OU.name as orgunit_name"));
 
-    for (OrderParam orderParam : params.getOrders()) {
-      Optional<TrackedEntityQueryParams.OrderColumn> orderColumn =
-          findColumn(orderParam.getField());
-
-      if (orderColumn.isPresent()) {
-        columns.add(orderColumn.get().getSqlColumnWithTableAlias());
-      } else {
-        if (sortableAttributesAndFilters(params).stream()
-            .anyMatch(i -> i.getItem().getUid().equals(orderParam.getField()))) {
-          columns.add(
-              statementBuilder.columnQuote(orderParam.getField())
-                  + ".value AS "
-                  + statementBuilder.columnQuote(orderParam.getField()));
+    for (Order order : params.getOrder()) {
+      if (order.getField() instanceof String field) {
+        if (!ORDERABLE_FIELDS.containsKey(field)) {
+          throw new IllegalArgumentException(
+              String.format(
+                  "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                  field, String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
         }
+
+        // all orderable fields are already in the select
+        if (ENROLLMENT_DATE_KEY.equals(field)) {
+          columns.add(ENROLLMENT_ALIAS + ".enrollmentdate as " + ENROLLMENT_DATE_ALIAS);
+        }
+      } else if (order.getField() instanceof TrackedEntityAttribute tea) {
+        if (sortableAttributesAndFilters(params).stream()
+            .anyMatch(i -> i.getItem().getUid().equals(tea.getUid()))) {
+          columns.add(
+              statementBuilder.columnQuote(tea.getUid())
+                  + ".value AS "
+                  + statementBuilder.columnQuote(tea.getUid()));
+        }
+      } else {
+        throw new IllegalArgumentException(
+            String.format(
+                "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                order.getField(),
+                String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
       }
     }
 
@@ -437,17 +448,20 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
   /** Get a set of QueryItem that contains sortable attributes also defined as filers */
   private Set<QueryItem> sortableAttributesAndFilters(TrackedEntityQueryParams params) {
     List<String> ordersIdentifier =
-        params.getOrders().stream().map(OrderParam::getField).collect(Collectors.toList());
+        params.getOrder().stream()
+            .filter(o -> o.getField() instanceof TrackedEntityAttribute)
+            .map(o -> ((TrackedEntityAttribute) o.getField()).getUid())
+            .toList();
     return params.getAttributesAndFilters().stream()
         .filter(queryItem -> ordersIdentifier.contains(queryItem.getItemId()))
         .collect(Collectors.toSet());
   }
 
   /**
-   * Generates the WHERE-clause of the subquery SQL related to tracked entity instances.
+   * Generates the WHERE-clause of the sub-query SQL related to tracked entity instances.
    *
    * @param whereAnd tracking if where has been invoked or not
-   * @return a SQL segment for the WHERE clause used in the subquery
+   * @return a SQL segment for the WHERE clause used in the sub-query
    */
   private String getFromSubQueryTrackedEntityConditions(
       SqlHelper whereAnd, TrackedEntityQueryParams params) {
@@ -497,15 +511,6 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
             .append(SINGLE_QUOTE);
       }
     }
-    if (params.isSynchronizationQuery()) {
-      trackedEntity.append(whereAnd.whereAnd()).append(" TE.lastupdated >= TE.lastsynchronized ");
-      if (params.getSkipChangedBefore() != null) {
-        trackedEntity
-            .append(" AND TE.lastupdated >= '")
-            .append(getMediumDateString(params.getSkipChangedBefore()))
-            .append(SINGLE_QUOTE);
-      }
-    }
 
     if (!params.isIncludeDeleted()) {
       trackedEntity.append(whereAnd.whereAnd()).append("TE.deleted IS FALSE ");
@@ -539,7 +544,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
 
   /**
    * Generates a single INNER JOIN for searching for an attribute by query strings. Searches are
-   * done using lower() expression, since attribute values are case insensitive. The query search is
+   * done using lower() expression, since attribute values are case-insensitive. The query search is
    * extremely slow compared to alternatives. A query string (Can be multiple) has to match at least
    * 1 attribute value for each attribute we have access to. We use Regex to search, allowing both
    * exact match and with wildcards (EQ or LIKE).
@@ -587,15 +592,13 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
 
   /**
    * Generates a single INNER JOIN for each attribute we are searching on. We can search by a range
-   * of operators. All searching is using lower() since attribute values are case insensitive.
+   * of operators. All searching is using lower() since attribute values are case-insensitive.
    */
   private String joinAttributeValueWithoutQueryParameter(TrackedEntityQueryParams params) {
     StringBuilder attributes = new StringBuilder();
 
     List<QueryItem> filterItems =
-        params.getAttributesAndFilters().stream()
-            .filter(QueryItem::hasFilter)
-            .collect(Collectors.toList());
+        params.getAttributesAndFilters().stream().filter(QueryItem::hasFilter).toList();
 
     for (QueryItem queryItem : filterItems) {
       String col = statementBuilder.columnQuote(queryItem.getItemId());
@@ -632,7 +635,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
   /**
    * Generates the LEFT JOINs used for attributes we are ordering by (If any). We use LEFT JOIN to
    * avoid removing any rows if there is no value for a given attribute and te. The result of this
-   * LEFT JOIN is used in the subquery projection, and ordering in the subquery and main query.
+   * LEFT JOIN is used in the sub-query projection, and ordering in the sub-query and main query.
    *
    * @return a SQL LEFT JOIN for attributes used for ordering, or empty string if not attributes is
    *     used in order.
@@ -734,11 +737,13 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    * @return a SQL INNER JOIN for enrollments
    */
   private String getFromSubQueryJoinEnrollmentConditions(TrackedEntityQueryParams params) {
-    if (params.getOrders().stream().anyMatch(p -> ENROLLED_AT.isPropertyEqualTo(p.getField()))) {
+    if (params.getOrder().stream()
+        .filter(o -> o.getField() instanceof String)
+        .anyMatch(p -> ENROLLMENT_DATE_KEY.equals(p.getField()))) {
       return " INNER JOIN enrollment "
-          + PROGRAM_INSTANCE_ALIAS
+          + ENROLLMENT_ALIAS
           + " ON "
-          + PROGRAM_INSTANCE_ALIAS
+          + ENROLLMENT_ALIAS
           + "."
           + "trackedentityid"
           + "= TE.trackedentityid ";
@@ -962,7 +967,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
 
   /**
    * Generates SQL for LEFT JOINing relevant tables with the tracked entities we have in our result.
-   * After the subquery, we know which tracked entities we are returning, but these LEFT JOINs will
+   * After the sub-query, we know which tracked entities we are returning, but these LEFT JOINs will
    * add any extra information we need. For example attribute values, tet uid, tea uid, etc.
    *
    * @return a SQL with several LEFT JOINS, one for each relevant table to retrieve information
@@ -998,97 +1003,61 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     return relatedTables.toString();
   }
 
-  /**
-   * Generates the GROUP BY clause of the query. This is only needed when we are projecting any
-   * attributes. If any attributes are present we are aggregating them into a string. In case we are
-   * ordering by an attribute, we also need to include that column in the group by.
-   *
-   * @return a SQL GROUP BY clause, or empty string if no attributes are specified.
-   */
-  private String getQueryGroupBy(TrackedEntityQueryParams params) {
-    if (params.getAttributes().isEmpty()) {
-      return "";
-    }
-
-    StringBuilder groupBy =
-        new StringBuilder()
-            .append("GROUP BY TE.trackedentityid, ")
-            .append("TE.uid, ")
-            .append("TE.created, ")
-            .append("TE.lastupdated, ")
-            .append("TE.ou, ")
-            .append("TE.ouname, ")
-            .append("TET.uid, ")
-            .append("TE.potentialduplicate, ")
-            .append("TE.inactive ")
-            .append(params.isIncludeDeleted() ? ", TE.deleted " : "");
-
-    for (QueryItem queryItem : sortableAttributesAndFilters(params)) {
-      groupBy
-          .append(", TE.")
-          .append(statementBuilder.columnQuote(queryItem.getItemId()))
-          .append(SPACE);
-    }
-
-    return groupBy.toString();
-  }
-
   private String getLimitClause(int limit) {
     return "LIMIT " + limit;
   }
 
   /**
-   * Generates the ORDER BY clause. This clause is used both in the subquery and main query. When
-   * using it in the subquery, we want to make sure we get the right tracked entities. When we order
-   * in the main query, it's to make sure we return the results in the correct order, since order
-   * might be mixed after GROUP BY.
+   * Generates the ORDER BY clause. This clause is used both in the sub-query and main query. When
+   * using it in the sub-query, we want to make sure we get the right tracked entities. When we
+   * order in the main query, it's to make sure we return the results in the correct order, since
+   * order might be mixed after GROUP BY.
    *
-   * @param innerOrder indicates whether this is the subquery order by or main query order by
-   * @param isGridQuery indicates whether this is used for grid query or not.
+   * @param innerOrder indicates whether this is the sub-query order by or main query order by
    * @return a SQL ORDER BY clause.
    */
-  private String getQueryOrderBy(
-      boolean innerOrder, TrackedEntityQueryParams params, boolean isGridQuery) {
-    if (!isGridQuery || !params.getAttributes().isEmpty()) {
-      List<String> orderFields = new ArrayList<>();
-      Set<QueryItem> sortableAttributesAndFilters = sortableAttributesAndFilters(params);
-
-      for (OrderParam order : params.getOrders()) {
-        Optional<TrackedEntityQueryParams.OrderColumn> orderColumn = findColumn(order.getField());
-
-        if (orderColumn.isPresent()) {
-          String orderField =
-              innerOrder
-                  ? orderColumn.get().getSqlColumnWithTableAlias()
-                  : orderColumn.get().getSqlColumnWithMainTable();
-
-          orderFields.add(orderField + SPACE + order.getDirection());
-        } else if (sortableAttributesAndFilters.stream()
-            .anyMatch(i -> i.getItem().getUid().equals(order.getField()))) {
-          String orderField =
-              innerOrder
-                  ? statementBuilder.columnQuote(order.getField()) + ".value "
-                  : MAIN_QUERY_ALIAS + "." + statementBuilder.columnQuote(order.getField());
-
-          orderFields.add(orderField + SPACE + order.getDirection());
+  private String getQueryOrderBy(TrackedEntityQueryParams params, boolean innerOrder) {
+    List<String> orderFields = new ArrayList<>();
+    for (Order order : params.getOrder()) {
+      if (order.getField() instanceof String field) {
+        if (!ORDERABLE_FIELDS.containsKey(field)) {
+          throw new IllegalArgumentException(
+              String.format(
+                  "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                  field, String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
         }
-      }
 
-      if (!orderFields.isEmpty()) {
-        return "ORDER BY " + StringUtils.join(orderFields, ',') + SPACE;
+        orderFields.add(ORDERABLE_FIELDS.get(field) + " " + order.getDirection());
+      } else if (order.getField() instanceof TrackedEntityAttribute tea) {
+        String orderField =
+            innerOrder
+                ? statementBuilder.columnQuote(tea.getUid()) + ".value "
+                : MAIN_QUERY_ALIAS + "." + statementBuilder.columnQuote(tea.getUid());
+
+        orderFields.add(orderField + SPACE + order.getDirection());
+      } else {
+        throw new IllegalArgumentException(
+            String.format(
+                "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                order.getField(),
+                String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
       }
+    }
+
+    if (!orderFields.isEmpty()) {
+      return "ORDER BY " + StringUtils.join(orderFields, ',') + SPACE;
     }
 
     if (params.getAttributesAndFilters().stream()
         .noneMatch(qi -> qi.hasFilter() && qi.isUnique())) {
-      return "ORDER BY TE.trackedentityid ASC ";
-    } else {
-      return "";
+      return "ORDER BY " + DEFAULT_ORDER + " ";
     }
+
+    return "";
   }
 
   /**
-   * Generates the LIMIT and OFFSET part of the subquery. The limit is decided by several factors:
+   * Generates the LIMIT and OFFSET part of the sub-query. The limit is decided by several factors:
    * 1. maxtelimit in a TET or Program 2. PageSize and Offset 3. No paging
    * (TRACKER_TRACKED_ENTITY_QUERY_LIMIT will apply in this case)
    *
@@ -1099,12 +1068,12 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    *
    * <p>If we have maxtelimit and paging on, we set the limit to maxtelimit.
    *
-   * <p>If we dont have maxtelimit, and paging on, we set normal paging parameters
+   * <p>If we don't have maxtelimit, and paging on, we set normal paging parameters
    *
-   * <p>If neither maxtelimit or paging is set, we have no limit set by the user, so system will set
-   * the limit to TRACKED_ENTITY_MAX_LIMIT which can be configured in system settings.
+   * <p>If neither maxtelimit nor paging is set, we have no limit set by the user, so system will
+   * set the limit to TRACKED_ENTITY_MAX_LIMIT which can be configured in system settings.
    *
-   * <p>The limit is set in the subquery, so the latter joins have fewer rows to consider.
+   * <p>The limit is set in the sub-query, so the latter joins have fewer rows to consider.
    *
    * @return a SQL LIMIT and OFFSET clause, or empty string if no LIMIT can be deducted.
    */
